k8s/manifests-345503/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-345503
  namespace: journee
  labels:
    app: journee-345503
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-345503
  template:
    metadata:
      labels:
        app: journee-345503
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-345503
          image: gcr.io/my-docker-471807/journee:v5.0.0
          ports:
            - containerPort: 3000
