k8s/manifests-345503/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-345503
  namespace: journee
spec:
  selector:
    app: journee-345503
  ports:
    - port: 80
      targetPort: 3000
